# PlatformGame

./: .gitignore  CMakeLists.txt  PlatformGame.sln  README.md  conanfile.txt  setup_project.bat
PlatformGame/: Camera.cpp  Camera.h  Game.cpp  Game.h  Map.cpp  Map.h  PlatformGame.vcxproj  PlatformGame.vcxproj.filters  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Resources.cpp  Resources.h  main.cpp  map.txt
include/: Camera.h  Game.h  Map.h  Physics.h  Player.h  Renderer.h  Resources.h
src/: Camera.cpp  Game.cpp  Map.cpp  Physics.cpp  Player.cpp  Renderer.cpp  Resources.cpp  main.cpp
